# auto_audio_depth_estimation

./: .gitignore  EXPERIMENTS.md  README.md  archive.json  hypotheses.tsv  paper_method_experiments.md  prepare.py  program.md  pyproject.toml  research.py  results.tsv  run_base.py  studies.json  train.py
base/: __init__.py  batvision.py  unet_baseline.py
utils/: bench_raydpt.py  diag_d1.py  profile_raydpt.py  record_run.py  report.py  research.py  run_attrib.sh  run_attrib2.sh  run_batvision_grid.sh  run_confirm.sh  run_ede.sh  run_fastbase.sh  run_g1.sh  run_g3.sh  run_g4.sh  run_h2.sh  run_h3.sh  run_lrsweep.sh  run_queue10.sh  run_queue11.sh  run_queue3.sh  run_queue4.sh  run_queue5.sh  run_queue7.sh  run_stable.sh
