[project]
name = "autoresearch"
version = "0.1.0"
description = "Depth estimation from echoes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "Pillow>=9.4.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
